# llm-in-cb

./: .dockerignore  .gitattributes  Dockerfile  README.md  botik.py  config_api.json  docker-compose.yml  pyproject.toml  ИПС_презентация.pptx  ипс_цб.docx
benchmark/: benchmark.py  config.py  report.md  tools.py
llm/: agent.py  llm_connection.py
llm_in_cb/: config.py  models.py
llm_in_cb/bot/: bot.py  botik.py
llm_in_cb/bot/core/: config.py  llm.py
llm_in_cb/bot/handlers/: chat.py  model_selection.py  start.py
llm_in_cb/bot/keyboards/: inline.py
llm_in_cb/llm_api/: Dockerfile
llm_in_cb/parser/: tg_channels.txt  tg_parser.py
llm_in_cb/rag/: vector_api.py  vector_database.py
llm_in_cb/rag/embedder/: embedding_api.py
llm_in_cb/tests/: test_llm.py  test_rag.py
models/: qwen2.5-coder-1.5b-q8_0.gguf
qdrant_storage/: raft_state.json
qdrant_storage/collections/llm_in_cb_test_1/0/: newest_clocks.json
qdrant_storage/collections/llm_in_cb_test_1/0/segments/38bbb274-466f-44bb-af01-66a11db9235f/: IDENTITY  LOG  segment.json
qdrant_storage/collections/llm_in_cb_test_1/0/segments/4747d5e9-1bf4-4f0a-b7f0-bd7944822c84/: IDENTITY  LOG
qdrant_storage/collections/llm_in_cb_test_1/0/segments/491758e9-fc95-46ed-8fbc-ab3f45fda299/: IDENTITY  LOG
qdrant_storage/collections/llm_in_cb_test_1/0/segments/533d32da-2cda-4358-980b-32bb499203f4/: IDENTITY  LOG
qdrant_storage/collections/llm_in_cb_test_2/0/: newest_clocks.json  replica_state.json
qdrant_storage/collections/llm_in_cb_test_2/0/wal/: first-index
(+86 files in other folders)
